@@ -1,3 +1,7 @@
+2010-01-21  Mario Carrion  <mario@carrion.mx>
+
+	* barecity_1.5/style.css: Added left, right and centered. Img.
+
 2010-01-13  Mario Carrion  <mario@carrion.mx>
 
 	* barecity_1.5/style.css: Centering.
